--- a/src/views/partials/hs.ejs
+++ b/src/views/partials/hs.ejs
@@ -23,7 +23,7 @@
       </div>
       <div class="scroll-container">
         <div class="item-grid">
-          <% items.forEach(item => { %>
+          <% items2.forEach(item => { %>
           <div class="item-card">
             <img src="<%= item.image %>" alt="<%= item.name %>">
             <div class="item-details">
@@ -41,7 +41,7 @@
       </div>
       <div class="scroll-container">
         <div class="item-grid">
-          <% items.forEach(item => { %>
+          <% items3.forEach(item => { %>
           <div class="item-card">
             <img src="<%= item.image %>" alt="<%= item.name %>">
             <div class="item-details">
