--- a/src/sass/components/_paymentcheck.scss
+++ b/src/sass/components/_paymentcheck.scss
@@ -1,4 +1,4 @@
-.checkout-container {
+.payment-container {
   max-width: 400px;
   margin: 2rem auto;
   background: #fff;
@@ -108,7 +108,7 @@
       }
 
       .confirm-btn {
-        margin: 0 auto; /* Center the Confirm button */
+        margin: 0 auto; 
         width: 100%;
         max-width: 280px;
         padding: 0.7rem;
@@ -137,7 +137,7 @@
     }
 
     .pay-btn {
-      margin: 0 auto; /* Center the Pay button */
+      margin: 0 auto; 
       width: 100%;
       max-width: 280px;
       padding: 1rem;
