--- a/src/sass/media/_listings.scss
+++ b/src/sass/media/_listings.scss
@@ -275,6 +275,7 @@
     }
   }
 }
+
 .more-options-modal {
   position: fixed;
   top: 70px;
@@ -329,6 +330,7 @@
     }
   }
 }
+
 .carousel-container {
   position: relative;
 
@@ -344,7 +346,7 @@
       max-height: 400px;
 
       height: auto;
-      object-fit: contain; 
+      object-fit: contain;
     }
 
     .carousel-nav {
@@ -379,19 +381,19 @@
     position: relative;
     margin-bottom: 20px;
   }
-  
+
   .carousel-main-image {
     width: 100%;
     max-height: 400px;
     object-fit: cover;
     border-radius: 8px;
   }
-  
+
   .carousel-dots {
     text-align: center;
     margin-top: 10px;
   }
-  
+
   .dot {
     height: 10px;
     width: 10px;
@@ -401,11 +403,11 @@
     display: inline-block;
     cursor: pointer;
   }
-  
+
   .dot.active {
     background-color: #555;
   }
-  
+
 }
 
 .action-buttons {
@@ -416,7 +418,8 @@
 }
 
 .heart-button,
-.add-to-cart-button {
+.add-to-cart-button,
+.bin-btn form button {
   font-size: 1.7rem;
   padding: 8px 12px;
   cursor: pointer;
@@ -449,4 +452,3 @@
   opacity: 1;
   pointer-events: auto;
 }
-
